--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "mongoose": "^9.0.1",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
-    "nodemailer": "^7.0.12"
+    "nodemailer": "^7.0.12",
+    "resend": "^6.9.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
